<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Obezite</string>
    <string name="action_settings">Settings</string>
    <string name="index">İçindekiler</string>
    <string name="about">Hakkında</string>
    <string name="food">Yemekler</string>
    <string name="search">Ara</string>
    <string name="search_in_titles">Başlıklarda Ara</string>
    <string name="search_in_descriptions">İçeriklerde Ara</string>
    <string name="search_hint">Arama kutusu</string>
    <string name="description_splashScreenImage">Splash Screen</string>
    <string name="description_splashScreenButton">Kapat</string>
	<string name="app_label">E.Ü. Tıp Fakültesi - Obezite</string>
	<string name="ege">Ege Üniversitesi</string>
	<string name="ege_tip">Ege Üniversitesi Tıp Fakültesi</string>
    <string name="style"> table {
        border: 1px solid black;
        border-collapse: collapse;
        }

        td {
        border: 1px solid black;
        padding: 0px 10px 0px 10px;
        }

        table.noborder {
        border: 0px;
        }

        table.noborder td {
        border: 0px;
        }
        table.noborder tr {
        border: 0px;
        }
        table tr.baslik {
        background-color:blue;
        color:white;
        font-weight:bold;
        }

        p {
        text-indent: 15px;
        }

        .tedaviList li {
        color: #0044FF;
        }

        .bold {
        font-weight: bold;
        }

        .bordo {
        color: #FF0088;
        }

        .orange {
        color: orange;
        }

        .blue {
        color: blue;
        }

        .purple {
        color: purple;
        }

        .center {
        text-align: center;
        }</string>
</resources>