<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <RadioGroup
            android:id="@+id/search_options"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true" >

            <RadioButton
                android:id="@+id/search_in_titles"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/search_in_titles" />

            <RadioButton
                android:id="@+id/search_in_descriptions"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/search_in_descriptions" />
        </RadioGroup>

        <EditText
            android:id="@+id/edt_search"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/search_options"
            android:layout_toLeftOf="@+id/search_button"
            android:hint="@string/search_hint"
            android:inputType="text"
            android:maxLines="1"
            android:singleLine="true" >

            <requestFocus />
        </EditText>

        <Button
            android:id="@+id/search_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@id/edt_search"
            android:layout_alignParentRight="true"
            android:layout_alignTop="@id/edt_search"
            android:text="@string/search" />
    </RelativeLayout>

    <ListView
        android:id="@+id/searchList"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >
    </ListView>

</LinearLayout>