<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:alpha="0.1"
        android:contentDescription="@string/ege"
        android:scaleType="fitCenter"
        android:src="@drawable/ege" />

    <android.support.v4.view.ViewPager
        android:id="@+id/pager"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity" />

    <ScrollView
        android:id="@+id/splashScreenScroll"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true" >

        <RelativeLayout
            android:id="@+id/relativeLayoutActivityMain"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <ImageView
                android:id="@+id/imageRectorsWellcomeMessage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:adjustViewBounds="true"
                android:contentDescription="@string/description_splashScreenImage"
                android:src="@drawable/rectors_wellcome_message" />

            <ImageButton
                android:id="@+id/imgButtonWelcomeMessage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignRight="@+id/imageRectorsWellcomeMessage"
                android:layout_alignTop="@+id/imageRectorsWellcomeMessage"
                android:background="@null"
                android:contentDescription="@string/description_splashScreenButton"
                android:src="@drawable/close_button" />
        </RelativeLayout>
    </ScrollView>

</RelativeLayout>